k8s/Components/network-policies/app-allow-rules.yaml
# El frontend acepta tráfico entrante solo desde el Ingress Controller.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
---
# auth-api acepta trafico desde frontend y puede enviar trafico a users api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-to-auth-api
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: auth-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: 
            matchLabels:
              app: frontend
  Egress:
    - to:
        - podSelector:
            matchLabels:
              app: users-api
---
# users-api solo acepta tráfico desde auth-api.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-users-api
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: users-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-api
---
# Permitir trafico de ingreso en todos desde frontend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress_front-to-todos
  namespace: apps
spec:
  podSelector:
    matchlabels:
      app: todos-api
    policyTypes:
      - Ingress:
        - from:
            - podSelector:
                matchLabels:
                  app: frontend
---
#  Todos los pods de este namespace pueden comunicarse con Observability y messaging
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-egress
  namespace: apps
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: messaging
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
    - ports:          # DNS — sin esto los pods no resuelven nombres
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
