k8s/Components/network-policies/messaging-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: messaging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
